// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    >
      默认
    </span>
    <a
      href="https://www.tencent.com/zh-cn"
      rel="noreferrer"
      target="_blank"
    >
      <span
        class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
      >
        超链接
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`delete.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <span
      style="margin-right: 10px;"
    >
      可删除
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    >
      可删除标签0
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    >
      <svg
        class="t-icon t-icon-discount"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      可删除标签1
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    >
      可删除标签2
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--check"
    style="margin-right: 5px;"
  >
    有效标签
  </span>
  <span
    class="t-tag t-tag--default t-tag--check t-tag--disabled"
    style="margin-right: 5px;"
  >
    无效标签
  </span>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
  >
    <svg
      class="t-icon t-icon-discount"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    默认标签
  </span>
</DocumentFragment>
`;

exports[`long-text.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square t-tag--ellipsis"
    style="margin-right: 5px; margin-bottom: 10px; max-width: 150px;"
  >
    超长省略文本标签超长省略文本标签
  </span>
</DocumentFragment>
`;

exports[`selectable.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--check t-tag--checked"
    style="margin-right: 5px;"
  >
    选中
  </span>
  <span
    class="t-tag t-tag--default t-tag--check"
    style="margin-right: 5px;"
  >
    未选
  </span>
  <span
    class="t-tag t-tag--default t-tag--check t-tag--disabled"
    style="margin-right: 5px;"
  >
    Disabled
  </span>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--mark"
    style="margin-right: 5px;"
  >
    mark
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--round"
    style="margin-right: 5px;"
  >
    round
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    style="margin-right: 5px;"
  >
    square
  </span>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--small t-tag--square t-size-s"
    style="margin-right: 5px;"
  >
    小型标签
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
    style="margin-right: 5px;"
  >
    默认标签
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--large t-tag--square t-size-l"
    style="margin-right: 5px;"
  >
    大型标签
  </span>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div>
    <span>
      默认：
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
    >
      default
    </span>
  </div>
  <div>
    <span>
      深色：
    </span>
    <span
      class="t-tag t-tag--primary t-tag--dark t-tag--middle t-tag--square"
    >
      primary
    </span>
    <span
      class="t-tag t-tag--warning t-tag--dark t-tag--middle t-tag--square"
    >
      warning
    </span>
    <span
      class="t-tag t-tag--danger t-tag--dark t-tag--middle t-tag--square"
    >
      danger
    </span>
    <span
      class="t-tag t-tag--success t-tag--dark t-tag--middle t-tag--square"
    >
      success
    </span>
  </div>
  <div>
    <span>
      浅色：
    </span>
    <span
      class="t-tag t-tag--primary t-tag--light t-tag--middle t-tag--square"
    >
      primary
    </span>
    <span
      class="t-tag t-tag--warning t-tag--light t-tag--middle t-tag--square"
    >
      warning
    </span>
    <span
      class="t-tag t-tag--danger t-tag--light t-tag--middle t-tag--square"
    >
      danger
    </span>
    <span
      class="t-tag t-tag--success t-tag--light t-tag--middle t-tag--square"
    >
      success
    </span>
  </div>
  <div>
    <span>
      朴素：
    </span>
    <span
      class="t-tag t-tag--primary t-tag--plain t-tag--middle t-tag--square"
    >
      primary
    </span>
    <span
      class="t-tag t-tag--warning t-tag--plain t-tag--middle t-tag--square"
    >
      warning
    </span>
    <span
      class="t-tag t-tag--danger t-tag--plain t-tag--middle t-tag--square"
    >
      danger
    </span>
    <span
      class="t-tag t-tag--success t-tag--plain t-tag--middle t-tag--square"
    >
      success
    </span>
  </div>
</DocumentFragment>
`;
